# NeuralNetworks

./: .gitignore  404.html  README.md  __init__.py  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  setup.cfg  sitemap.xml
.github/workflows/: main.yml  mkdocs-deploy.yml  python-publish.yml
.ipynb_checkpoints/: mkdocs-checkpoint.yml  readme-checkpoint.md
Container/: index.html
Container/crits/: index.html
Container/get/: index.html
Container/norms/: index.html
Container/optims/: index.html
Containers/concept/: index.html
Containers/crits/: index.html
Containers/norms/: index.html
Containers/optims/: index.html
Documentation/: mkdocs.yml
Documentation/docs/: index.md
Documentation/docs/Image/: image_from_url.md  reshape.md
Documentation/docs/MLP/: index.md  nb_params.md  neurons.md  params.md  plot.md  train.md
Documentation/docs/Plots/: compare.md  losses.md  plot.md  train.md
Documentation/docs/mlp/: __init__.md  params.md
Image/image_from_url/: index.html
Image/reshape/: index.html
MLP/: index.html
MLP/Create_MLP/: index.html
MLP/__call__/: index.html
MLP/__init__/: index.html
MLP/__repr__/: index.html
MLP/losses/: index.html
MLP/nb_params/: index.html
MLP/neurons/: index.html
MLP/params/: index.html
MLP/plot/: index.html
MLP/train/: index.html
NeuralNetworks/: Dependances.py  MLP.py  Plot.py  __init__.py
NeuralNetworks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
NeuralNetworks/libs/: Image.py
Plots/compare/: index.html
Plots/losses/: index.html
Plots/plot/: index.html
Plots/train/: index.html
Trainer/: index.html
Trainer/Trainer/: index.html
Trainer/lr/: index.html
Trainer/train/: index.html
UI/learnings/: index.html
UI/losses/: index.html
dependences/: index.html
dependences/dependences/: index.html
dependences/install/: index.html
dependences/support/: index.html
docs/: index.md  mkdocs.yml
docs/css/: custom.css
docs/docs/: index.md
docs/docs/Container/: crits.md  get.md  index.md  norms.md  optims.md
docs/docs/Containers/: concept.md  crits.md  norms.md  optims.md
docs/docs/Image/: image_from_url.md
docs/docs/MLP/: index.md  nb_params.md  neurons.md  params.md  plot.md  train.md
docs/docs/Plots/: compare.md  losses.md  plot.md  train.md
docs/docs/Trainer/: Trainer.md  index.md  lr.md  train.md
docs/docs/UI/: learnings.md  losses.md
docs/docs/dependences/: dependences.md  index.md  install.md  support.md
docs/docs/module/: index.md  load.md  mlp.md  module.md  save.md  save_onnx.md  vae.md
docs/docs/stylesheets/: extra.css
docs/mlp/: Create_MLP.md  __call__.md  __repr__.md  index.md  nb_params.md  plot.md  train.md
exemples/: Image.ipynb  MNIST.ipynb
javascripts/: extra.js
libs/: Dependances.py  Image.py  MLP.py  Plot.py
libs/.ipynb_checkpoints/: Dependances-checkpoint.py  Image-checkpoint.py  MLP-checkpoint.py  Plot-checkpoint.py
mlp/: index.html
mlp/Create_MLP/: index.html
mlp/__call__/: index.html
mlp/__init__/: index.html
mlp/__repr__/: index.html
mlp/nb_params/: index.html
mlp/neurons/: index.html
mlp/params/: index.html
mlp/plot/: index.html
mlp/train/: index.html
module/: index.html
module/load/: index.html
module/mlp/: index.html
module/module/: index.html
module/save/: index.html
module/save_onnx/: index.html
module/vae/: index.html
placeholder/: index.html
search/: search_index.json
src/NeuralNetworks/: Dependances.py  Latent.py  MLP.py  Plot.py  __init__.py
src/NeuralNetworks/Dependances/: __init__.py  matplot.py  pytorch.py
src/NeuralNetworks/MLP/: FourierFeatures.py  Layers.py  MLP.py  _MLP_tools.py  (+2 more)
stylesheets/: extra.css
tests/: test_MLP.py  test_NeuralNetworks.py
(+32 files in other folders)
