[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuralNetworks"
dynamic = ["version"]
description = "Multi-Layer Perceptrons with multi-Fourier encoding, variable learning rate, visualization and PyTorch compilation"
authors = [
    { name = "Alexandre Brun", email = "alexandre51160@gmail.com" }
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]

dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "onnx",
    "onnx-simplifier"
    "tqdm",
    "visualtorch"
]

[project.urls]
Documentation = "https://xxxfetraxxx.github.io/NeuralNetworks/"
Source = "https://github.com/xXxFetraxXx/NeuralNetworks"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "NeuralNetworks.__version__" }