[metadata]
name = NeuralNetworks
version = 0.1.3
author = Alexandre Brun
author_email = alexandre51160@gmail.com
description = Multi-Layer Perceptrons with Fourier encoding, visualization and PyTorch compilation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xXxFetraxXx/NeuralNetworks
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    matplotlib
    tqdm
    torch
    torchvision
    torchaudio
    torchmetrics
    visualtorch
    random-fourier-features-pytorch